# YalabGames

./: DS.py  README.md  RTT.py  Stroop.py  app.py  globals.py  participants.xlsx  pyproject.toml  read.py  replit_zip_error_log.txt
static/: DS_logic.js  DS_styles.css  RTT_script.js  RTT_style.css  requirements.txt  stroop_logic.js  stroop_styles.css  styles.css
templates/: DS_index.html  RTT_index.html  RTT_instructions_1.html  RTT_instructions_2.html  RTT_phase_1.html  RTT_phase_2.html  RTT_practice_1.html  RTT_practice_2.html  RTT_success.html  index.html  stroop_index.html  stroop_instruction.html
